# oxide-sql

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.txt  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  gh-pages.yml
crates/oxide-admin/: Cargo.toml
crates/oxide-admin/examples/: blog_admin.rs
crates/oxide-admin/src/: actions.rs  error.rs  filters.rs  lib.rs  options.rs  site.rs
crates/oxide-admin/src/templates/: base.rs  detail.rs  list.rs  mod.rs
crates/oxide-admin/src/views/: delete.rs  detail.rs  index.rs  list.rs  mod.rs
crates/oxide-auth/: Cargo.toml
crates/oxide-auth/src/: error.rs  lib.rs  password.rs  permissions.rs  session.rs  user.rs
crates/oxide-auth/src/backends/: database.rs  mod.rs
crates/oxide-forms/: Cargo.toml
crates/oxide-forms/src/: error.rs  form.rs  lib.rs  validation.rs
crates/oxide-forms/src/fields/: checkbox.rs  hidden.rs  mod.rs  select.rs  text.rs
crates/oxide-forms/src/widgets/: bootstrap.rs  mod.rs
crates/oxide-migrate/: Cargo.toml
crates/oxide-migrate/examples/: blog_migrations.rs
crates/oxide-migrate/src/: autodetector.rs  error.rs  executor.rs  history.rs  lib.rs  main.rs  operations.rs  schema.rs  state.rs  writer.rs
crates/oxide-migrate/src/dialect/: mod.rs  sqlite.rs
crates/oxide-orm/: Cargo.toml
crates/oxide-orm/src/: error.rs  lib.rs  manager.rs  model.rs  queryset.rs
crates/oxide-orm/src/fields/: boolean.rs  char.rs  mod.rs  numeric.rs  relations.rs  temporal.rs
crates/oxide-orm/src/query/: aggregates.rs  filter.rs  mod.rs
crates/oxide-router/: Cargo.toml
crates/oxide-router/src/: error.rs  lib.rs  middleware.rs  path.rs  request.rs  response.rs  router.rs
crates/oxide-sql-core/: Cargo.toml
crates/oxide-sql-core/examples/: invoicing.rs
crates/oxide-sql-core/src/: lib.rs
crates/oxide-sql-core/src/ast/: expression.rs  mod.rs  statement.rs  types.rs
crates/oxide-sql-core/src/builder/: delete.rs  expr.rs  insert.rs  mod.rs  select.rs  typed.rs  update.rs  value.rs
crates/oxide-sql-core/src/dialect/: generic.rs  mod.rs
crates/oxide-sql-core/src/lexer/: mod.rs  span.rs  token.rs  tokenizer.rs
crates/oxide-sql-core/src/migrations/: codegen.rs  column_builder.rs  diff.rs  introspect.rs  migration.rs  mod.rs  operation.rs  snapshot.rs  state.rs  table_builder.rs
crates/oxide-sql-core/src/migrations/dialect/: duckdb.rs  mod.rs  postgres.rs  sqlite.rs
crates/oxide-sql-core/src/parser/: error.rs  mod.rs  parser.rs  pratt.rs
crates/oxide-sql-core/src/schema/: mod.rs
crates/oxide-sql-core/tests/: derive_table.rs  diff_integration.rs  duckdb_e2e.rs  parser_complex.rs  parser_comprehensive.rs  parser_data_types.rs  parser_errors.rs  parser_expressions.rs  parser_functions.rs  parser_insert.rs  parser_literals.rs  parser_operators.rs  parser_select_clauses.rs  parser_select_columns.rs  parser_select_from.rs  parser_update_delete.rs
crates/oxide-sql-core/tests/common/: mod.rs
crates/oxide-sql-derive/: Cargo.toml
crates/oxide-sql-derive/src/: lib.rs
crates/oxide-sql-sqlite/: Cargo.toml
crates/oxide-sql-sqlite/src/: dialect.rs  lib.rs
crates/oxide-sql-sqlite/src/builder/: mod.rs  upsert.rs
doc/: docusaurus.config.ts  package-lock.json  package.json
doc/docs/: getting-started.md  index.md
doc/docs/admin/: index.md
doc/docs/builders/: delete.md  index.md  insert.md  select.md  update.md
doc/docs/schema/: attributes.md  index.md  queries.md  tables.md
doc/docs/security/: advanced-techniques.md  blind-sql-injection.md  case-studies.md  index.md  nosql-orm-injection.md  prevention.md  sql-injection-fundamentals.md  testing.md
doc/src/scss/: custom.scss
e2e/: package.json  playwright.config.ts  tsconfig.json
e2e/tests/: admin.spec.ts  auth.spec.ts  crud.spec.ts
