[workspace]
resolver = "2"
members = [
    "crates/oxide-sql-core",
    "crates/oxide-sql-derive",
    "crates/oxide-sql-sqlite",
    "crates/oxide-migrate",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Danny Willems"]
license = "MIT"
repository = "https://github.com/leakix/oxide-sql"

[workspace.dependencies]
oxide-sql-core = { path = "crates/oxide-sql-core" }
oxide-sql-derive = { path = "crates/oxide-sql-derive" }
oxide-sql-sqlite = { path = "crates/oxide-sql-sqlite" }
oxide-migrate = { path = "crates/oxide-migrate" }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
tokio = { version = "1.44", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1.40"
