[workspace]
resolver = "2"
members = [
    "crates/oxide-sql-core",
    "crates/oxide-sql-derive",
    "crates/oxide-sql-sqlite",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Danny Willems"]
license = "MIT"
repository = "https://github.com/leakix/oxide-sql"
homepage = "https://leakix.github.io/oxide-sql/"

[workspace.dependencies]
oxide-sql-core = { path = "crates/oxide-sql-core", version = "0.2.0" }
oxide-sql-derive = { path = "crates/oxide-sql-derive", version = "0.2.0" }
oxide-sql-sqlite = { path = "crates/oxide-sql-sqlite", version = "0.2.0" }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
