[package]
name = "oxide-auth"
description = "Django-like authentication with User, sessions, and permissions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oxide-sql-core.workspace = true
oxide-orm.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
rand.workspace = true

[dev-dependencies]
oxide-sql-derive.workspace = true
