[package]
name = "oxide-orm"
description = "Django-like ORM with Model, Manager, and QuerySet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oxide-sql-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
oxide-sql-derive.workspace = true
