[package]
name = "oxide-sql-core"
description = "Type-safe SQL parser and builder with compile-time validation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
