[package]
name = "oxide-sql-core"
description = "Type-safe SQL parser and builder with compile-time validation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["sql", "parser", "query-builder", "type-safe", "sql-injection"]
categories = ["database", "parser-implementations"]

[dependencies]

[dev-dependencies]
oxide-sql-derive.workspace = true
