[package]
name = "oxide-sql-sqlite"
description = "SQLite-specific SQL parser and builder extensions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["sql", "sqlite", "upsert", "type-safe", "query-builder"]
categories = ["database"]

[dependencies]
oxide-sql-core.workspace = true
